Tue Nov  2 07:46:38 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * MPC/config/dds4ccm_logger.mpb:
          Added base projects

        * connectors/dds4ccm/impl/logger/Logger_Service.h:
          Layout changes

        * connectors/dds4ccm/impl/ndds/DDSPublisherListener_T.h:
        * connectors/dds4ccm/impl/ndds/DDSSubscriberListener_T.h:
        * connectors/dds4ccm/impl/ndds/convertors/SampleInfo.h:
          Removed unnecessary defines.

        * connectors/dds4ccm/tests/LateBinding/ReadGet/Receiver/RG_LateBinding_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/LateBinding/ReadGet/Receiver/RG_LateBinding_Receiver_impl.cpp:
          Resolved runtime issues.

Mon Nov  1 14:09:29 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Hello/descriptors/Aliased_Map.cdd:
        * examples/Hello/descriptors/run_test_alias.pl:
          Removed these files, don't work at all

Mon Nov  1 13:25:01 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/logger/Logger_Service.h:
        * connectors/dds4ccm/impl/logger/Logger_Service.cpp:
          Resolved compile issues on windows.

Mon Nov  1 13:11:54 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * MPC/config/dds4ccm_logger.mpb:

        * connectors/dds4ccm/impl/ContentFilterSetting.cpp:
        * connectors/dds4ccm/impl/DDSCallbackStatusHandler.cpp:
        * connectors/dds4ccm/impl/DDS_Base_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Event_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Get_T.cpp:
        * connectors/dds4ccm/impl/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/DDS_Read_T.cpp:
        * connectors/dds4ccm/impl/DDS_StateListen_T.cpp:
        * connectors/dds4ccm/impl/DDS_State_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.cpp: