@@ -153,9 +153,10 @@ Note: Creating the deployment plan descriptor is a tedious and
 <li> Please make sure that the Modified_Deployment.xsd and XMI.xsd files are in the Hello/descriptors directory.
 The former file can be found in $CIAO_ROOT/docs/schema directory. <P>
 
-<li> Create the <em>NodeManagerMap.dat</em> file containing the CORBALOC IIOP address of each <code>NodeManager</code>
-     where it is running. Please refer to the existing <a href="./descriptors/NodeManagerMap.dat">
-     <code>NodeManagerMap.dat</code></a> for details.
+<li> Create the <em>NodeManagerMap.cdd</em> file containing the CORBALOC IIOP address of each <code>NodeManager</code>
+     where it is running. Please refer to the existing <a href="./descriptors/NodeManagerMap.cdd">
+     <code>NodeManagerMap.cdd</code></a> for details. Alwyas use for the property name "edu.vanderbilt.dre.DAnCE.StringIOR" and for the
+     resourceType "edu.vanderbilt.dre.DAnCE.NodeAddress".
      As you can see, we only specify 2 <code>NodeManagers</code>, which means these two components
      will be installed in the different <code>NodeApplication</code> server. Please refer to the
      <em>flattened_deploymentplan.cdp</em> file to see how a deployer
@@ -187,8 +188,8 @@ Finally you are ready to deploy the component-based application you have develop
 
       <li>Without using the naming service.<br/>
       Navigate to <em>$CIAO_ROOT/examples/Hello/descriptor</em> and execute:<br/>
-      <code>$DANCE_ROOT/bin/dance_execution_manager -eEM.ior --node-map NodeManagerMap.dat </code><br/>
-      <em>NOTE</em>: As one can see, we use the "NodeManagerMap.dat" file to instruct the
+      <code>$DANCE_ROOT/bin/dance_execution_manager -eEM.ior --cdd NodeManagerMap.cdd </code><br/>
+      <em>NOTE</em>: As one can see, we use the "NodeManagerMap.cdd" file to instruct the
         Execution_Manager how to find the endpoint of each individual NodeManager (i.e., Node Daemon) where
         component(s) will be deployed. This is non-standard.
       </li>
