@@ -473,11 +473,8 @@ div.Section1 {
     Deploymentplan interpreter that comes along with PICML will help us
     to generate a Plan.cdp file. Please make sure you generate
     this file to Quoter/descriptors. Note that to get the example working</span><span style="COLOR:black; FONT-FAMILY:'Courier New'">,</span><span style='COLOR:black'>a
-    Node Map file (NodeMap.dat) in Quoter/descriptors should be created to map logical nodes to NodeManager object
-    references,e.g:</span></p>
-  <pre wrap=""><span style='COLOR:black'>DistributorNode corbaloc:iiop:localhost:30000/NodeManager</span></pre>
-  <pre><span
-style='COLOR:black'>BrokerNode&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; corbaloc:iiop:localhost:40000/NodeManager</span></pre>
+    Node Map xml file (NodeMap.cdd) in Quoter/descriptors should be created to map logical nodes to NodeManager object
+    references.</span></p>
   <pre><span
 style='COLOR:black'>&nbsp;</span></pre>
   <pre><span style='COLOR:black'>&nbsp;</span></pre>
